# fastApi-learn

./: .gitignore  main.py  pyproject.toml  requirements.txt
db/: engine.py
