[tool.poetry]
name = "fastapi-learn"
version = "0.1.0"
description = ""
authors = ["Foshati <amirrezafoshati@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
